--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -4,7 +4,7 @@ body{
     font-family: 'Merriweather', serif;
 }
 h1{
-    font-size: 90px;
+    font-size: 5.625rem;
     margin-top:0px;
     font-family: 'Sacramento', cursive;
 }
