--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -5,14 +5,18 @@ body{
 }
 h1{
     font-size: 5.625rem;
-    margin-top:0px;
+    margin:3.125rem auto 0rem auto ;
     font-family: 'Sacramento', cursive;
+    color: #66BFBF;
 }
 h2{
+    font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
+    color: #66BFBF;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
 }
 .top_container{
     background-color: #F9F7CF;
@@ -24,11 +28,6 @@ h3{
     height: 200px;
     width: 200px;
 }
-.bottom_container{
-    background-color: teal;
-    height: 200px;
-    width: 200px;
-}
 .top-cloud{
     position: absolute;
     top:50px;
@@ -37,16 +36,6 @@ h3{
 .bottom-cloud{
     position: absolute;
 }
-.navf{
-    background-color: tomato;
-    width: 100%;
-    height: 20px;
-    position: absolute;
-    top: 0%;
-}
-.navs{
-    background-color:yellowgreen;
-    width: 100%;
-    top: 0%;
-    position: fixed;
+a{
+    color: #11999E;
 }
