--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,18 +1,20 @@
 body{
-    margin: 0px;
+    color: #40514e;
+    margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
 }
 h1{
+    color: #66BFBF;
     font-size: 5.625rem;
     margin:3.125rem auto 0rem auto ;
     font-family: 'Sacramento', cursive;
-    color: #66BFBF;
 }
 h2{
-    font-size: 2.5rem;
-    font-family: 'Montserrat', sans-serif;
     color: #66BFBF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
