--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -15,6 +15,7 @@ h2{
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
     font-weight: normal;
+    padding-bottom: 10px;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
