--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -21,22 +21,29 @@ h3{
     font-family: 'Montserrat', sans-serif;
     color: #11999E;
 }
-.top_container{
+p{
+    line-height: 2;
+}
+hr{
+    border-style:dotted;
+    border-color: #EAF6F6;
+    border-width: 10px 0px 0px 0px;
+    width: 5%;
+}
+a{
+    color: #11999E;
+    text-decoration: none;
+}
+.top-container{
     background-color: #EAF6F6;
     position: relative;
     padding-top: 100px;
 }
-.middle_container{
-    background-color: yellowgreen;
-    height: 200px;
-    width: 200px;
+.middle-container{
+    margin: 100px 0px;
 }
 .bottom-container{
-    background-color: #66BFBF;
-    height: 60px;
-    width: auto;
-    color: #EAF6F6;
-    padding: 40px;
+
 }
 .top-cloud{
     position: absolute;
@@ -45,10 +52,6 @@ h3{
 }
 .bottom-cloud{
     position: absolute;
-}
-a{
-    color: #11999E;
-    text-decoration: none;
 }
 .skill-row{
     width: 50%;
@@ -65,12 +68,6 @@ a{
     width: 25%;
     float: right;
     margin-left: 30px;
-}
-hr{
-    border-style:dotted;
-    border-color: #EAF6F6;
-    border-width: 10px 0px 0px 0px;
-    width: 5%;
 }
 .footer-link{
     margin: 20px;
