--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -79,6 +79,10 @@ a{
 .contact-me{
     margin: 80px auto;
 }
+.intro{
+    width: 30%;
+    margin: auto;
+}
 .btn{
     background-color: #11999E;
     color: #EAF6F6;
