--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -25,10 +25,10 @@ p{
     line-height: 2;
 }
 hr{
-    border-style:dotted;
-    border-color: #EAF6F6;
-    border-width: 10px 0px 0px 0px;
-    width: 5%;
+    border:dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
 }
 a{
     color: #11999E;
@@ -47,11 +47,13 @@ a{
 }
 .top-cloud{
     position: absolute;
-    top:50px;
-    right:400px;
+    right:300px;
+    top:30px;
 }
 .bottom-cloud{
     position: absolute;
+    left: 250px;
+    right: 300px;
 }
 .skill-row{
     width: 50%;
@@ -83,8 +85,46 @@ a{
     width: 30%;
     margin: auto;
 }
-.btn{
-    background-color: #11999E;
-    color: #EAF6F6;
-    height: 50px;
+.contact-me{
+    width: 50%;
+    margin: 40px auto 30px;
 }
+.btn {
+    background: #11CDD4;
+    background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -webkit-gradient(to bottom, #11CDD4, #11999E);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    color: #FFFFFF;
+    font-family: Arial;
+    font-size: 25px;
+    font-weight: 100;
+    padding: 20px;
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+    text-shadow: 1px 1px 20px #000000;
+    border: solid #337FED 0;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .btn:hover {
+    border: solid #2BC4AD 1px;
+    background: #30E3CB;
+    background-image: -webkit-linear-gradient(top, #30E3CB, #3D94F6);
+    background-image: -moz-linear-gradient(top, #30E3CB, #3D94F6);
+    background-image: -ms-linear-gradient(top, #30E3CB, #3D94F6);
+    background-image: -o-linear-gradient(top, #30E3CB, #3D94F6);
+    background-image: -webkit-gradient(to bottom, #30E3CB, #3D94F6);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-decoration: none;
+ }
