--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -100,7 +100,7 @@ a{
     -moz-border-radius: 8px;
     border-radius: 8px;
     color: #FFFFFF;
-    font-family: Arial;
+    font-family: 'Merriweather', serif;
     font-size: 25px;
     font-weight: 100;
     padding: 20px;
@@ -114,7 +114,6 @@ a{
     cursor: pointer;
     text-align: center;
  }
- 
  .btn:hover {
     border: solid #2BC4AD 1px;
     background: #30E3CB;
