--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -1,11 +1,19 @@
+body{
+    font-family: "Montserrat";
+}
 #title{
     background-color: #ff4c68;
+    color: #fff;
 }
 .container-fluid{
     padding: 3% 15%;
 }
 h1{
-    font-family: 'Montserrat-Black', sans-serif;
+    font-family: "Montserrat-Black";
     size: 3rem;
     line-height: 1.5;
+}
+.navbar-brand{
+    font-family: "Ubuntu";
+    font-size: 2.5rem;
 }
