--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -10,10 +10,28 @@ body{
 }
 h1{
     font-family: "Montserrat-Black";
-    size: 3rem;
+    font-size: 3.5rem;
     line-height: 1.5;
+}
+.navbar{
+    padding: 0 0 4.5rem;
 }
 .navbar-brand{
     font-family: "Ubuntu";
     font-size: 2.5rem;
+    font-weight: bold;
+}
+.nav-item{
+    padding: 0 18px;
+}
+.nav-link{
+    font-size: 1.2rem;
+    font-family: "Montserrat-Light";
+}
+.download-button {
+    margin: 5% 3% 5% 0;
+}
+.title-image {
+    width: 60%;
+    transform: rotate(25deg);
 }
