--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "Montserrat";
+    font-family: "Ubuntu";
 }
 #title{
     background-color: #ff4c68;
@@ -12,6 +12,18 @@ h1{
     font-family: "Montserrat-Black";
     font-size: 3.5rem;
     line-height: 1.5;
+}
+h2{
+    font-family: "Montserrat-Bold";
+    font-size: 3rem;
+    line-height: 1.5;
+}
+h3{
+    font-family: "Montserrat-Bold";
+    font-size: 1.5rem;
+}
+p{
+    color: #8f8f8f;
 }
 .navbar{
     padding: 0 0 4.5rem;
@@ -34,4 +46,28 @@ h1{
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+}
+#features {
+    padding: 7% 15%;
+}
+.feature-box{
+    text-align: center;
+    padding: 5%;
+}
+.icon {
+    color: #ef8172;
+    margin: 1rem;
+}
+.icon:hover {
+    color: #ff4c68;
+}
+#testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+}
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
 }
