--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -62,9 +62,11 @@ p{
     color: #ff4c68;
 }
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     background-color: #ef8172;
+}
+.carousel-item {
+    padding: 7% 15%;
 }
 .testimonial-image {
     width: 10%;
@@ -75,4 +77,8 @@ p{
     background-color: #ef8172;
     text-align: center;
     padding-bottom: 3%;
+}
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
 }
