--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -1,29 +1,29 @@
-body{
-    font-family: "Ubuntu";
+body {
+    font-family: "Montserrat";
+}
+h1 {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+h2 {
+    font-family: "Montserrat-Bold";
+    font-size: 3rem;
+    line-height: 1.5;
+}
+h3{
+     font-family: "Montserrat-Bold";
+    font-size: 1.5rem;
+}
+p {
+    color: #8f8f8f;
 }
 #title{
     background-color: #ff4c68;
     color: #fff;
 }
 .container-fluid{
-    padding: 3% 15%;
-}
-h1{
-    font-family: "Montserrat-Black";
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
-h2{
-    font-family: "Montserrat-Bold";
-    font-size: 3rem;
-    line-height: 1.5;
-}
-h3{
-    font-family: "Montserrat-Bold";
-    font-size: 1.5rem;
-}
-p{
-    color: #8f8f8f;
+    padding: 3% 15% 7%;
 }
 .navbar{
     padding: 0 0 4.5rem;
@@ -46,9 +46,13 @@ p{
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 #features {
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
 }
 .feature-box{
     text-align: center;
@@ -88,4 +92,31 @@ p{
 }
 .pricing-column {
     padding: 3% 2%;
+}
+#cta {
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+.cta-heading {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+#footer {
+    padding: 7% 15%;
+    text-align: center;
+}
+.social-icon {
+    margin: 20px 10px;
+}
+@media (max-width: 991px) {
+    #title{
+        text-align: center;
+    }
+    .title-image{
+        position: static;
+        transform: rotate(0);
+    }
 }
