--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -2,13 +2,10 @@ body {
     font-family: "Montserrat";
     text-align: center;
 }
-h1 {
-    font-family: "Montserrat-Black";
-    font-size: 3.5rem;
-    line-height: 1.5;
+h1,h2,h3,h4,h5,h6 {
+    font-family: "Montserrat-Bold";
 }
 h2 {
-    font-family: "Montserrat-Bold";
     font-size: 3rem;
     line-height: 1.5;
 }
@@ -19,25 +16,30 @@ h3{
 p {
     color: #8f8f8f;
 }
+.big-heading {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
 #title{
     background-color: #ff4c68;
     color: #fff;
 }
-.container-fluid{
+.container-fluid {
     padding: 3% 15% 7%;
 }
-.navbar{
+.navbar {
     padding: 0 0 4.5rem;
 }
-.navbar-brand{
+.navbar-brand {
     font-family: "Ubuntu";
     font-size: 2.5rem;
     font-weight: bold;
 }
-.nav-item{
+.nav-item {
     padding: 0 18px;
 }
-.nav-link{
+.nav-link {
     font-size: 1.2rem;
     font-family: "Montserrat-Light";
 }
@@ -55,7 +57,7 @@ p {
     background-color: #fff;
     position: relative;
 }
-.feature-box{
+.feature-box {
     text-align: center;
     padding: 5%;
 }
@@ -66,9 +68,14 @@ p {
 .icon:hover {
     color: #ff4c68;
 }
+/* Testimonial Section */
 #testimonials {
     text-align: center;
     background-color: #ef8172;
+}
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 .carousel-item {
     padding: 7% 15%;
@@ -87,9 +94,14 @@ p {
     width: 15%;
     margin: 20px 20px 50px;
 }
+/* pricing Section */
 #pricing{
     padding: 100px;
     text-align: center;
+}
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 .pricing-column {
     padding: 3% 2%;
