--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -5,28 +5,26 @@ body {
 h1,h2,h3,h4,h5,h6 {
     font-family: "Montserrat-Bold";
 }
-h2 {
-    font-size: 3rem;
-    line-height: 1.5;
-}
-h3{
-     font-family: "Montserrat-Bold";
-    font-size: 1.5rem;
-}
 p {
     color: #8f8f8f;
 }
+/* Headings */
 .big-heading {
     font-family: "Montserrat-Black";
     font-size: 3.5rem;
     line-height: 1.5;
 }
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+}
 #title{
     background-color: #ff4c68;
     color: #fff;
+    text-align: left;
 }
 .container-fluid {
-    padding: 3% 15% 7%;
+    padding: 7% 15%;
 }
 .navbar {
     padding: 0 0 4.5rem;
@@ -52,13 +50,16 @@ p {
     position: absolute;
     right: 30%;
 }
+/* Feature Section */
 #features {
     padding: 7% 15%;
     background-color: #fff;
     position: relative;
 }
+.feature-title {
+    font-size: 1.5rem;
+}
 .feature-box {
-    text-align: center;
     padding: 5%;
 }
 .icon {
@@ -70,7 +71,6 @@ p {
 }
 /* Testimonial Section */
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
 }
 .testimonial-text {
@@ -87,7 +87,6 @@ p {
 }
 #press{
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 .press-logo {
@@ -97,7 +96,7 @@ p {
 /* pricing Section */
 #pricing{
     padding: 100px;
-    text-align: center;
+     
 }
 .price-text {
     font-size: 3rem;
@@ -110,23 +109,17 @@ p {
     background-color: #ff4c68;
     color: #fff;
     padding: 7% 15%;
-    text-align: center;
-}
-.cta-heading {
-    font-family: "Montserrat-Black";
-    font-size: 3.5rem;
-    line-height: 1.5;
+     
 }
 #footer {
     padding: 7% 15%;
-    text-align: center;
 }
 .social-icon {
     margin: 20px 10px;
 }
 @media (max-width: 991px) {
     #title{
-        text-align: center;
+      text-align: center;   
     }
     .title-image{
         position: static;
