--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -18,14 +18,19 @@ p {
     font-size: 3rem;
     line-height: 1.5;
 }
-#title{
-    background-color: #ff4c68;
-    color: #fff;
-    text-align: left;
-}
+/* Containers */
 .container-fluid {
     padding: 7% 15%;
 }
+/* Sections */
+.colored-section {
+    background-color: #ff4c68;
+    color: #fff;
+}
+.white-section {
+    background-color: #fff;
+}
+/* Navigation Bars */
 .navbar {
     padding: 0 0 4.5rem;
 }
@@ -41,9 +46,18 @@ p {
     font-size: 1.2rem;
     font-family: "Montserrat-Light";
 }
+/* Download Buttons */
 .download-button {
     margin: 5% 3% 5% 0;
 }
+/* Title Section */
+#title{
+    text-align: left;
+}
+#title .container-fluid {
+    padding: 3% 15% 7%;
+}
+/* Title  image */
 .title-image {
     width: 60%;
     transform: rotate(25deg);
@@ -52,8 +66,6 @@ p {
 }
 /* Feature Section */
 #features {
-    padding: 7% 15%;
-    background-color: #fff;
     position: relative;
 }
 .feature-title {
@@ -76,9 +88,6 @@ p {
 .testimonial-text {
     font-size: 3rem;
     line-height: 1.5;
-}
-.carousel-item {
-    padding: 7% 15%;
 }
 .testimonial-image {
     width: 10%;
@@ -107,12 +116,7 @@ p {
 }
 #cta {
     background-color: #ff4c68;
-    color: #fff;
-    padding: 7% 15%;
-     
-}
-#footer {
-    padding: 7% 15%;
+    color: #fff; 
 }
 .social-icon {
     margin: 20px 10px;
