--- a/Bootstrap-Installation/css/styles.css
+++ b/Bootstrap-Installation/css/styles.css
@@ -30,7 +30,7 @@ p {
 .white-section {
     background-color: #fff;
 }
-/* Navigation Bars */
+/* Navigation Bar */
 .navbar {
     padding: 0 0 4.5rem;
 }
@@ -46,18 +46,15 @@ p {
     font-size: 1.2rem;
     font-family: "Montserrat-Light";
 }
-/* Download Buttons */
+/* Buttons */
 .download-button {
     margin: 5% 3% 5% 0;
 }
 /* Title Section */
-#title{
-    text-align: left;
-}
 #title .container-fluid {
     padding: 3% 15% 7%;
+    text-align: left;
 }
-/* Title  image */
 .title-image {
     width: 60%;
     transform: rotate(25deg);
